@@ -6,4 +6,5 @@ v<0.0.2>, <01/11/2020> -- Full code refactor.
 v<0.0.3>, <02/15/2020> -- Add documentation.
 v<0.0.3>, <02/21/2020> -- Major code refactoring for stable release.
 v<0.0.3>, <02/21/2020> -- Add predict_proba.
-v<0.0.1>, <02/22/2020> -- Turn on autotest for Windows by Appveyor.
+v<0.0.3>, <02/22/2020> -- Turn on autotest for Windows by Appveyor.
+v<0.0.4>, <04/20/2020> -- A set of bug fix and code improvement.
